--- a/15-441-project-1/Makefile
+++ b/15-441-project-1/Makefile
@@ -16,7 +16,7 @@ DEPS = parse.h y.tab.h
 
 default: all
 
-all: example lisod
+all: lisod
 
 %.o : %.c $(DEPS)
 	$(CC) -c $(CFLAGS) $< $(CPPFLAGS)
@@ -27,10 +27,7 @@ lex.yy.c: lexer.l
 y.tab.c: parser.y
 	yacc -d $^
 
-example: y.tab.o lex.yy.o utils.o http.o buffer.o parse.o example.o
-	$(CC) ${CFLAGS} -o $@ $^ ${LDFLAGS} 
-
-lisod: log.o y.tab.o lex.yy.o utils.o http.o buffer.o parse.o handle.o cgi.o conn.o pool.o lisod.o
+lisod: log.o y.tab.o lex.yy.o utils.o io.o http.o buffer.o parse.o handle.o cgi.o conn.o pool.o lisod.o
 	$(CC) ${CFLAGS} -o $@ $^ ${LDFLAGS}
 
 clean:
